<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="12dp">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:minHeight="15dp"
            android:progressTint="@color/colorPrimary"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/view"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="12dp"

            android:elevation="12dp"
            app:cardCornerRadius="25dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progressBar">

            <ImageView
                android:contentDescription="@string/logo"
                android:id="@+id/circleImage"
                android:layout_width="50dp"
                android:layout_height="50dp"
                tools:srcCompat="@tools:sample/backgrounds/scenic"
                android:scaleType="centerCrop"/>

            <TextView
                android:id="@+id/grade"
                android:layout_width="50dp"
                android:layout_height="50dp"
                style="@style/TextAppearance.MaterialComponents.Headline5"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@android:color/white" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/nombreModulo"
            style="@style/TextAppearance.MaterialComponents.Headline5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginEnd="48dp"
            app:layout_constraintEnd_toStartOf="@+id/arrowBtn"
            app:layout_constraintStart_toEndOf="@+id/view"
            app:layout_constraintTop_toTopOf="@+id/view" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/arrowBtn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/ic_keyboard_arrow_down"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/view" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/expandableView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="12dp"
            android:visibility="gone"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/nombreModulo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/indicatorsLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/evaluated_indicators"
                android:layout_marginStart="16dp"
                style="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/percentLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/reached_percentage"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                style="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/indicatorsLabel"/>

            <TextView
                android:id="@+id/moduleLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/module"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                style="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/percentLabel"/>

            <TextView
                android:id="@+id/periodLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/school_period"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                style="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/moduleLabel"/>

            <TextView
                android:id="@+id/calendarLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/calendar"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                style="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/periodLabel"/>

            <TextView
                android:id="@+id/teacherLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/teacher"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                style="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/calendarLabel"/>

            <TextView
                android:id="@+id/indicators"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                app:layout_constraintStart_toEndOf="@+id/indicatorsLabel"
                app:layout_constraintTop_toTopOf="@id/indicatorsLabel"/>

            <TextView
                android:id="@+id/percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                app:layout_constraintStart_toEndOf="@id/percentLabel"
                app:layout_constraintTop_toTopOf="@id/percentLabel" />

            <TextView
                android:id="@+id/module"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                app:layout_constraintStart_toEndOf="@id/moduleLabel"
                app:layout_constraintTop_toTopOf="@id/moduleLabel"/>

            <TextView
                android:id="@+id/period"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                app:layout_constraintStart_toEndOf="@id/periodLabel"
                app:layout_constraintTop_toTopOf="@id/periodLabel"/>

            <TextView
                android:id="@+id/calendar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                app:layout_constraintStart_toEndOf="@id/calendarLabel"
                app:layout_constraintTop_toTopOf="@id/calendarLabel"/>

            <TextView
                android:id="@+id/teacher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/teacherLabel"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>